--- a/jenkinsFile
+++ b/jenkinsFile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Deploy') {
             steps {
-               echo "deploy successfully"
+               echo "deploy successfully in production"
             }
         }
     }
