--- a/jenkinsFile
+++ b/jenkinsFile
@@ -8,7 +8,7 @@ pipeline {
         }
         stage('Test'){
             steps {
-                echo "Test successfully" 
+                echo "Test successfully in prod" 
             }
         }
         stage('Deploy') {
