--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,14 +1,18 @@
 pipeline {
- agent any
+ agent {
+        label 'slave1'
+     }
  stages {
         stage('Build') { 
             steps { 
                 echo "build sucessfully" 
+                sh 'sleep 6'
             }
         }
         stage('Test'){
             steps {
                 echo "Test successfully in prod" 
+                sh 'sleep 6'
             }
         }
         stage('Deploy') {
